--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Smile 2 Daily Progress Tracker - Block Piprali</title>
+    <title>Smile 2 Child Right Club Gathan - Block Piprali</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-language" content="en">
@@ -107,151 +107,71 @@ var surveyJSON = {
           "isRequired": true,
           "choices": [
             {
-              "value": "GOVT. PRIMARY SCHOOL CHAK KUMLIWALA",
+              "value": "INDIAN PUB.S. ABHAYPURA(8130507803)",
               "visibleIf": "{peeoName} = 'ABHAYPURA'"
             },
-            {
-              "value": "GOVT. SR.SEC.SCH., ABHAYPURA",
-              "visibleIf": "{peeoName} = 'ABHAYPURA'"
-            },
-            {
-              "value": "GOVT.ADARSH SR.SEC.SCH., NANGAL ABHYAPURA",
-              "visibleIf": "{peeoName} = 'ABHAYPURA'"
-            },
-            {
-              "value": "GOVT.P.SCH., DACHIN DHANI NANGAL",
-              "visibleIf": "{peeoName} = 'ABHAYPURA'"
-            },
-            {
-              "value": "GOVT.U.P.SCH., BHAGATPURA",
-              "visibleIf": "{peeoName} = 'ABHAYPURA'"
-            },
-            {
-              "value": "GOVT.U.P.SCH., CHIRAVALI JOHRI",
-              "visibleIf": "{peeoName} = 'ABHAYPURA'"
-            },
-            {
-              "value": "GOVT.U.P.SCH., JOSHIYAN KI DHANI",
-              "visibleIf": "{peeoName} = 'ABHAYPURA'"
-            },
-            {
-              "value": "GOVT.U.P.SCH., PRATVIPURA",
-              "visibleIf": "{peeoName} = 'ABHAYPURA'"
-            },
-            {
-              "value": "GOVT.P.SCH., CHATURBHUJ JOHARI",
+           {
+              "value": "TEEGOR SEC.S. BAJOR(8130502405)",
               "visibleIf": "{peeoName} = 'BAJOR'"
             },
             {
-              "value": "GOVT.P.SCH., FOOTI JOHDI BAJOR",
+              "value": "SHEKHAWATI SR.SEC.S. BAJOR(8130502406)",
               "visibleIf": "{peeoName} = 'BAJOR'"
             },
             {
-              "value": "GOVT.P.SCH., JHUNJHARA KA MATH",
+              "value": "KESHAV SANSKAR PUB. BAJOR(8130502412)",
               "visibleIf": "{peeoName} = 'BAJOR'"
             },
             {
-              "value": "GOVT.SR.SEC.SCH. BAJOR",
+              "value": "REDROSE PS KHARO KI DHANI(8130502502)",
               "visibleIf": "{peeoName} = 'BAJOR'"
             },
             {
-              "value": "GOVT.U.P.SCH., DHAKA KI DHANI",
+              "value": "OXFORD S.S. KAHARO KI DHANI(8130502503)",
               "visibleIf": "{peeoName} = 'BAJOR'"
             },
             {
-              "value": "GOVT.U.P.SCH., KAHARO KI DHANI",
-              "visibleIf": "{peeoName} = 'BAJOR'"
-            },
-            {
-              "value": "GOVT.U.P.SCH., MALIYON KI DHANI",
-              "visibleIf": "{peeoName} = 'BAJOR'"
-            },
-            {
-              "value": "GOVT.U.P.SCH., NEEM KI DHANI BAJOR",
-              "visibleIf": "{peeoName} = 'BAJOR'"
-            },
-            {
-              "value": "GOVT. ADARSH SEN. SEC.SCH., BAIDH KI DHANI",
+              "value": "TAGOR VIDYA BHAWAN BAIDH KI DH(8130507003)",
               "visibleIf": "{peeoName} = 'BED KI DHANI'"
             },
             {
-              "value": "GOVT.P.SCH., DERIWALI DHANI",
+              "value": "SUBODH PUBLIC SCHOOL(8130507004)",
+              "visibleIf": "{peeoName} = 'BED KI DHANI'"
+            },
+	    {
+              "value": "GALOBAL INTER. ACADEMY BED KI DHANI(8130507008)",
               "visibleIf": "{peeoName} = 'BED KI DHANI'"
             },
             {
-              "value": "GOVT. ADARSH SR. SEC.SCH., BERI",
+              "value": "SARSWATI SHIKSHAN SANSTHAN SR.SEC.SCHOOL(8130500112)",
               "visibleIf": "{peeoName} = 'BERI'"
             },
             {
-              "value": "GOVT.P.SCH., DIGYARADI JOHARI BERI",
+              "value": "CAREER SR.SEC.SCHOOL(8130500114)",
               "visibleIf": "{peeoName} = 'BERI'"
             },
             {
-              "value": "GOVT.P.SCH., KHAKHI JI KE MANDIR KE PASS, BERI",
-              "visibleIf": "{peeoName} = 'BERI'"
-            },
-            {
-              "value": "GOVT.P.SCH., MAHALANA JOHARA",
-              "visibleIf": "{peeoName} = 'BERI'"
-            },
-            {
-              "value": "GOVT.P.SCH., MAHANO KI JOHDI BERI",
-              "visibleIf": "{peeoName} = 'BERI'"
-            },
-            {
-              "value": "GOVT.P.SCH., UJEEN SINGH KA NADA, BERI",
-              "visibleIf": "{peeoName} = 'BERI'"
-            },
-            {
-              "value": "GOVT.SENIOR SECONDARY SCHOOL, BHOJYANA JOHARA",
-              "visibleIf": "{peeoName} = 'BERI'"
-            },
-            {
-              "value": "GOVT.U.P.SCH., BALU CHEJARA KI DHANI",
-              "visibleIf": "{peeoName} = 'BERI'"
-            },
-            {
-              "value": "GOVT.U.P.SCH., DINGLI JOHDI BERI",
-              "visibleIf": "{peeoName} = 'BERI'"
-            },
-            {
-              "value": "GOVT. ADARSH SR. SEC.SCH., BHADWASI",
+              "value": "TAIGOR PUBLIC S. BHADWASI(8130501303)",
               "visibleIf": "{peeoName} = 'BHADWASI'"
             },
             {
-              "value": "GOVT. K.G.B.V. SIKAR",
+              "value": "ADARSH BAL VIDYA MANDIR UPS BHADWASI(8130501304)",
               "visibleIf": "{peeoName} = 'BHADWASI'"
             },
-            {
-              "value": "GOVT.P.SCH., DHANGDA JOHADA",
-              "visibleIf": "{peeoName} = 'BHADWASI'"
-            },
-            {
-              "value": "GOVT.P.SCH., PURVANI JOHDI",
-              "visibleIf": "{peeoName} = 'BHADWASI'"
-            },
-            {
-              "value": "GOVT.SEC.SCH., JAGMALPURA",
-              "visibleIf": "{peeoName} = 'BHADWASI'"
-            },
-            {
-              "value": "GOVT.ADARSH SR.SEC.SCH., CHANDPURA",
+             {
+              "value": "MAA BHARTI UPS SIKAR(8130501506)",
               "visibleIf": "{peeoName} = 'CHANDPURA'"
             },
             {
-              "value": "GOVT.U.P.SCH., BAJAJ GRAM SANWALI",
+              "value": "BHARATI PUBLIC SCH. SIKAR(8130501509)",
               "visibleIf": "{peeoName} = 'CHANDPURA'"
             },
             {
-              "value": "GOVT.U.P.SCH., JODAKYA JOHARI",
+              "value": "S.B.S. VIDYA BHARATI SR.SEC.(8130501602)",
               "visibleIf": "{peeoName} = 'CHANDPURA'"
             },
             {
-              "value": "GOVT.U.P.SCH., MIRWALI TALAI",
-              "visibleIf": "{peeoName} = 'CHANDPURA'"
-            },
-            {
-              "value": "GOVT.U.P.SCH., SHALAMSINGH KI DHANI",
+              "value": "AKASHDEEP SIXAN SANSTHAN SEC.SCH. SANWALI(8130501603)",
               "visibleIf": "{peeoName} = 'CHANDPURA'"
             },
             {
