--- a/index.html
+++ b/index.html
@@ -882,65 +882,65 @@ var surveyJSON = {
           "isRequired": true,
           "columns": [
             {
-              "name": "Class",
-              "cellType": "dropdown",
-              "isRequired": true,
-              "choices": [
-                "Class 1",
-                "Class 2",
-                "Class 3",
-                "Class 4",
-                "Class 5",
-                "Class 6",
-                "Class 7",
-                "Class 8",
-                "Class 9",
-                "Class 10",
-                "Class 11",
-                "Class 12"
+           //   "name": "Class",
+           //   "cellType": "dropdown",
+           //   "isRequired": true,
+           //   "choices": [
+            //    "Class 1",
+            //    "Class 2",
+             //   "Class 3",
+             //   "Class 4",
+             //   "Class 5",
+             //   "Class 6",
+              //  "Class 7",
+              //  "Class 8",
+              //  "Class 9",
+              //  "Class 10",
+              //  "Class 11",
+              //  "Class 12"
               ]
             },
             {
-       "name": "Subject",
-       "cellType": "dropdown",
-       "isRequired": true,
-       "choices": [
-        "Hindi",
-        "English",
-        "Maths",
-        "EVS",
-        "Science",
-        "Social Science",
-        "Sanskrit",
-        "Urdu",
-        "Agriculture Science",
-        "Biology",
-        "Business Studies",
-        "Chemistry",
-        "Computer Science",
-        "Drawing",
-        "Economics",
-        "English Compulsory",
-        "English Literature",
-        "Farsi Literature",
-        "Financial Accountancy",
-        "Geography",
-        "Geology",
-        "Gujarati Literature",
-        "Hindi Compulsory",
-        "Hindi Literature",
-        "History",
-        "Home Science",
-        "Information Practices",
-        "Maths Optional",
-        "Physics",
-        "Political Science",
-        "Psychology",
-        "Public Administration",
-        "Punjabi",
-        "Sindhi Literature",
-        "Sociology",
-        "Urdu Literature"
+     //  "name": "Subject",
+     //  "cellType": "dropdown",
+     //  "isRequired": true,
+     //  "choices": [
+     //   "Hindi",
+     //   "English",
+     //   "Maths",
+      //  "EVS",
+       // "Science",
+       // "Social Science",
+       // "Sanskrit",
+       // "Urdu",
+      //  "Agriculture Science",
+      //  "Biology",
+       // "Business Studies",
+      //  "Chemistry",
+      //  "Computer Science",
+      //  "Drawing",
+      //  "Economics",
+      //  "English Compulsory",
+       // "English Literature",
+     //   "Farsi Literature",
+    //    "Financial Accountancy",
+    //    "Geography",
+    //    "Geology",
+     //   "Gujarati Literature",
+    //    "Hindi Compulsory",
+     //   "Hindi Literature",
+     //   "History",
+     //   "Home Science",
+     //   "Information Practices",
+     //   "Maths Optional",
+     //   "Physics",
+    //    "Political Science",
+    //    "Psychology",
+    //    "Public Administration",
+     //   "Punjabi",
+    //    "Sindhi Literature",
+    //    "Sociology",
+    //    "Urdu Literature"
        ]
       },
             {
