--- a/index.html
+++ b/index.html
@@ -881,68 +881,68 @@ var surveyJSON = {
           "title": "Fill Details",
           "isRequired": true,
           "columns": [
-            {
-           //   "name": "Class",
-           //   "cellType": "dropdown",
-           //   "isRequired": true,
-           //   "choices": [
-            //    "Class 1",
-            //    "Class 2",
-             //   "Class 3",
-             //   "Class 4",
-             //   "Class 5",
-             //   "Class 6",
-              //  "Class 7",
-              //  "Class 8",
-              //  "Class 9",
-              //  "Class 10",
-              //  "Class 11",
-              //  "Class 12"
-              ]
-            },
-            {
-     //  "name": "Subject",
-     //  "cellType": "dropdown",
-     //  "isRequired": true,
-     //  "choices": [
-     //   "Hindi",
-     //   "English",
-     //   "Maths",
-      //  "EVS",
-       // "Science",
-       // "Social Science",
-       // "Sanskrit",
-       // "Urdu",
-      //  "Agriculture Science",
-      //  "Biology",
-       // "Business Studies",
-      //  "Chemistry",
-      //  "Computer Science",
-      //  "Drawing",
-      //  "Economics",
-      //  "English Compulsory",
-       // "English Literature",
-     //   "Farsi Literature",
-    //    "Financial Accountancy",
-    //    "Geography",
-    //    "Geology",
-     //   "Gujarati Literature",
-    //    "Hindi Compulsory",
-     //   "Hindi Literature",
-     //   "History",
-     //   "Home Science",
-     //   "Information Practices",
-     //   "Maths Optional",
-     //   "Physics",
-    //    "Political Science",
-    //    "Psychology",
-    //    "Public Administration",
-     //   "Punjabi",
-    //    "Sindhi Literature",
-    //    "Sociology",
-    //    "Urdu Literature"
-       ]
-      },
+//             {
+//              "name": "Class",
+//              "cellType": "dropdown",
+//              "isRequired": true,
+//              "choices": [
+//                "Class 1",
+//                "Class 2",
+//                "Class 3",
+//                "Class 4",
+//                "Class 5",
+//                "Class 6",
+//                "Class 7",
+//                "Class 8",
+//                "Class 9",
+//                "Class 10",
+//                "Class 11",
+//                "Class 12"
+//               ]
+//             },
+//             {
+//       "name": "Subject",
+//       "cellType": "dropdown",
+//       "isRequired": true,
+//       "choices": [
+//        "Hindi",
+//        "English",
+//        "Maths",
+//        "EVS",
+//        "Science",
+//        "Social Science",
+//        "Sanskrit",
+//        "Urdu",
+//        "Agriculture Science",
+//        "Biology",
+//        "Business Studies",
+//        "Chemistry",
+//        "Computer Science",
+//        "Drawing",
+//        "Economics",
+//        "English Compulsory",
+//        "English Literature",
+//        "Farsi Literature",
+//        "Financial Accountancy",
+//        "Geography",
+//        "Geology",
+//        "Gujarati Literature",
+//        "Hindi Compulsory",
+//        "Hindi Literature",
+//        "History",
+//        "Home Science",
+//        "Information Practices",
+//        "Maths Optional",
+//        "Physics",
+//        "Political Science",
+//        "Psychology",
+//        "Public Administration",
+//        "Punjabi",
+//        "Sindhi Literature",
+//        "Sociology",
+//        "Urdu Literature"
+//        ]
+//       },
             {
               "name": "Child Age Group",
               "cellType": "text",
@@ -950,7 +950,7 @@ var surveyJSON = {
               "inputType": "text"
             },
 		  {
-              "name": "Date Of Child Right Club Gathan ",
+              "name": "Date Of Child Right Club Gathan",
               "cellType": "text",
               "isRequired": true,
               "inputType": "date"
@@ -1017,17 +1017,17 @@ function sendDataToServer(survey) {
 					var q = data.question2[i];
                     $.post( "https://docs.google.com/forms/u/0/d/e/1FAIpQLSdR7aTfCEfNefriSXpmKD6ccLT6QEVbGXtnGVoAWiig7w6MSA/formResponse",
                     {
-                    "entry.2081806952": data.date,
+                    			"entry.2081806952": data.date,
 					"entry.1997249446": data.peeoName,
 					"entry.1341436243": data.schoolName,
-					"entry.1365237637": q["Class"],
-					"entry.993949122": q["Subject"],
-					"entry.791177180": q["Total Enrolment"],
-					"entry.510921074": q["HW Given (Online)"],
-					"entry.2111580312": q["HW Given (Offline)"],
-					"entry.1681330709": q["HW Collected (Online)"],
-					"entry.79184850": q["HW Collected (Offline)"],
-					"entry.51442607": q["HW Portfolio Prepared"]
+					"entry.1365237637": q["Child Age Group"],
+					"entry.993949122": q["Date Of Child Right Club Gathan"],
+					"entry.791177180": q["Total Boys in Club"],
+					"entry.510921074": q["Total Girls in Club"],
+					"entry.2111580312": q["Name of Club Incharge"],
+					"entry.1681330709": q["Mobile no of Incharge"],
+					"entry.79184850": q["Meetings be Conducted Regularly Yes/No"],
+					"entry.51442607": q["Date of Last Meeting Conducted"]
                     }
                     );
 					}
