--- a/index.html
+++ b/index.html
@@ -1780,13 +1780,13 @@ var surveyJSON = {
               "inputType": "number"
             },
             {
-              "name": "Name of Club Incharge",
+              "name": "Name of Club In Charge",
               "cellType": "text",
               "isRequired": true,
               "inputType": "text"
             },
             {
-              "name": "Mobile no of Incharge",
+              "name": "Mobile No of In Charge",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
@@ -1836,8 +1836,8 @@ function sendDataToServer(survey) {
 					"entry.993949122": q["Date Of Child Right Club Gathan"],
 					"entry.791177180": q["Total Boys in Club"],
 					"entry.510921074": q["Total Girls in Club"],
-					"entry.2111580312": q["Name of Club Incharge"],
-					"entry.1681330709": q["Mobile no of Incharge"],
+					"entry.2111580312": q["Name of Club In Charge"],
+					"entry.1681330709": q["Mobile No of In Charge"],
 					"entry.79184850": q["Meetings be Conducted Regularly Yes/No"],
 					"entry.51442607": q["Date of Last Meeting Conducted"]
                     }
